# swbt-daemon

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  justfile
.codex/rules/: default.rules
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
api/: swbt.h  swbt_c_api.c
apps/swbt-daemon/: main.c  platform_process.c  platform_process.h  production_entrypoint.c  production_entrypoint.h
apps/swbt-debug-client/: debug_client.c  debug_client.h  main.c
cmake/: btstack_sources.cmake  btstack_winusb_location_patch.cmake  compiler_warnings.cmake  module_public_includes.cmake  sanitizers.cmake
cmake/mingw-compat-include/: SetupAPI.h  Windows.h  Winusb.h
docs/: development.md  hardware-test-log.md  status.md  upstream-btstack.md
scripts/: check-format.sh  format.sh  install-git-hooks.ps1  install-git-hooks.sh  package-windows-release.sh  require-dev-environment.sh  smoke-windows-release.ps1
spec/: README.md  dev-journal.md
spec/architecture/: README.md  bond-cache-persistence.md  daemon-application-boundary-rearchitecture.md  daemon-architecture-cutover.md  daemon-runtime-boundaries.md
spec/archive/: README.md  bond-cache-persistence.md  daemon-application-boundary-rearchitecture-before-cutover.md  daemon-runtime-boundaries-before-architecture-cutover.md  just-task-runner-migration.md
spec/complete/: README.md
spec/initial/: BTSTACK_SWITCH_DAEMON_IPC_DESIGN.md  BTSTACK_SWITCH_DEVELOPMENT_PLAN.md  README.md  REPOSITORY_INITIALIZATION_TODO.md  SWBT_DAEMON_INITIAL_DIRECTION.md
spec/operations/: README.md  development-tooling.md  just-task-runner-migration.md  release-build-and-publish.md  release-license-boundary.md  windows-hardware-bringup-sequence.md  windows-native-preflight.md  work-unit-spec-tdd-flow.md
spec/protocols/: README.md  daemon-ipc-v1.md  switch-hid-core.md
spec/references/: README.md  btstack-backend-build-matrix.md  btstack-daemon-entrypoint.md  btstack-hid-device-registration.md  btstack-hid-event-port-boundary.md  btstack-output-report-callbacks.md  btstack-output-report-parser-bridge.md  btstack-periodic-input-report-core.md  btstack-production-adapter.md  btstack-production-ports.md  btstack-source-selection.md  btstack-subcommand-reply-send-queue.md  switch-hid-descriptor-core.md  switch-hid-initial-source-audit.md  switch-player-lights-policy.md  switch-report-core.md  switch-rumble-core.md  switch-rumble-status-exposure.md  switch-spi-core.md  switch-subcommand-core.md  switch-subcommand-dispatcher-core.md  switch-subcommand-reply-core.md  switch-virtual-spi-seed-data.md
spec/wip/: README.md
swbt/application/: app.c  app.h  control_lease.c  control_lease.h  status.h
swbt/btstack_bridge/: README.md  bond_cache.c  bond_cache.h  classic_discovery.c  classic_discovery.h  classic_discovery_btstack_adapter.c  classic_discovery_btstack_adapter.h  device.c  device.h  hci_dump_text.c  hci_dump_text.h  hid_device_btstack_adapter.c  hid_device_btstack_adapter.h  hid_device_registration.c  hid_device_registration.h  hid_event.c  hid_event.h  hid_port.c  hid_port.h  input_report_scheduler.c  input_report_scheduler.h  input_report_timer_adapter.c  input_report_timer_adapter.h  output_report_callbacks.c  output_report_callbacks.h  output_report_handler.c  output_report_handler.h  production_adapter.c  production_adapter.h  production_btstack.c  production_btstack.h  production_btstack_impl.c  production_btstack_impl.h  production_ports.c  production_ports.h  subcommand_reply_queue.c  subcommand_reply_queue.h  timer_port.c  timer_port.h  usb_adapter_location.c  (+1 more)
swbt/control/: control.c  control.h
swbt/core/: diagnostics.c  diagnostics.h  logging.c  logging.h  metrics.c  metrics.h  spin_lock.h  state_mailbox.c  state_mailbox.h  swbt_version.c  swbt_version.h
swbt/daemon/: active_reconnect.c  active_reconnect.h  btstack_hid_session.c  btstack_hid_session.h  btstack_ipc_pump_adapter.c  btstack_ipc_pump_adapter.h  btstack_process_backend.c  btstack_process_backend.h  btstack_report_timer_bridge.c  btstack_report_timer_bridge.h  cli.c  cli.h  config.c  config.h  config_file.cpp  host.c  host.h  ipc_runner.c  ipc_runner.h  launch_options.c  launch_options.h  process.c  process.h  process_internal.h  production_backend.c  production_backend.h  production_backend_ops.h  production_hid_session.c  production_hid_session.h  production_ipc_pump.c  production_ipc_pump.h  production_process_backend.c  production_process_backend.h  (+16 more)
tests/: application_command_test.c  application_control_lease_test.c  architecture_journey_test.c  btstack_bond_cache_test.c  btstack_classic_discovery_test.c  btstack_device_test.c  btstack_hci_dump_text_test.c  btstack_hid_device_btstack_adapter_test.c  btstack_hid_device_registration_test.c  btstack_hid_event_test.c  btstack_hid_port_test.c  btstack_input_report_scheduler_test.c  btstack_input_report_timer_adapter_test.c  btstack_output_report_callbacks_test.c  btstack_output_report_handler_test.c  btstack_production_hci_dump_test.c  btstack_production_ports_test.c  btstack_subcommand_reply_queue_test.c  btstack_timer_port_test.c  btstack_usb_adapter_location_test.c  control_test.c  daemon_active_reconnect_test.c  daemon_btstack_hid_session_test.c  daemon_btstack_ipc_pump_adapter_test.c  daemon_btstack_process_backend_test.c  daemon_btstack_report_timer_bridge_test.c  daemon_cli_test.c  daemon_config_file_test.c  daemon_cutover_journey_test.c  daemon_host_test.c  daemon_ipc_runner_test.c  daemon_launch_options_test.c  daemon_process_test.c  daemon_production_backend_test.c  daemon_production_hid_sdp_record_test.c  daemon_production_hid_session_test.c  daemon_production_ipc_pump_test.c  daemon_production_process_backend_test.c  daemon_production_reconnect_test.c  daemon_production_report_timer_test.c  (+26 more)
tmp/: swbt_agent_skill_adoption_policy.md
work-units/: README.md
(+270 files in other folders)
